solve issue of scrollbar in textarea in content editor and img width in content

--- a/styles/scss/write/write.scss
+++ b/styles/scss/write/write.scss
@@ -18,6 +18,7 @@ $margin-in-between: 1rem;
 
   .title {
     resize: none;
+    overflow: hidden;
 
     @include text-form-input;
     @include heading-font($h2-font-size);
@@ -26,6 +27,7 @@ $margin-in-between: 1rem;
 
   .description {
     resize: none;
+    overflow: hidden;
     font-family: var(--font-body);
     color: var(--body-text-1);
 
@@ -247,6 +249,7 @@ $full-mode-editor-width: 100%;
   .content {
     transform-origin: bottom;
     height: auto;
+    overflow: hidden;
 
     width: $form-element-width;
     border: none;
@@ -274,6 +277,10 @@ $full-mode-editor-width: 100%;
 
   pre {
     overflow: scroll;
+  }
+
+  img {
+    width: 100%;
   }
 }
 
@@ -321,6 +328,7 @@ $full-mode-editor-width: 100%;
     background-color: var(--card-bg-1);
     padding: 1.375rem 1rem;
     outline: none;
+    overflow: hidden;
 
     @include body-main-text;
 
